Fix md syntax